FIxed date highlighting in dark mode

--- a/static/css/custom-dark.css
+++ b/static/css/custom-dark.css
@@ -21,3 +21,9 @@ html.dark blockquote {
 html.dark .gist .gist-file table tbody tr {
   background-color: #ebebeb;
 } 
+
+
+
+.post-header .meta .date .day {
+  color: #ddd
+}
